<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/NieuweMetingenMI"
            android:icon="@drawable/bridge"
            android:title="@string/new_search_menu_item" />
        <item
            android:id="@+id/EigenMetingenMI"
            android:icon="@drawable/bridge"
            android:title="@string/personal_favorites_menu_item" />
        <item
            android:id="@+id/ProjectenMI"
            android:icon="@drawable/bridge"
            android:title="@string/tracked_stations_menu_item" />
        <item
            android:id="@+id/SettingsMI"
            android:icon="@drawable/bridge"
            android:title="@string/action_settings" />
    </group>

    <item android:title="Communication">
        <menu>
            <item
                android:id="@+id/DelenMI"
                android:icon="@drawable/ic_menu_share"
                android:title="Web Links" />
            <item
                android:id="@+id/Info"
                android:icon="@drawable/bridge"
                android:title="@string/info_menu_item" />
        </menu>
    </item>

</menu>
